tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generic_binary_operation_type_mismatch/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Cannot assign an expression of type Field to a value of type bool
  ┌─ src/main.nr:4:17
  │
4 │         check = N;
  │                 -
  │

Aborting due to 1 previous error
