tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_numeric_generic_binary_operation_type_mismatch/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Cannot assign an expression of type Field to a value of type bool
  ┌─ src/main.nr:4:17
  │
4 │         check = N;
  │                 -
  │

Aborting due to 1 previous error
